== Changelog

=== 3.1 (Planned to January 2016)
* Update documentation
* #263 Now Selenide does **not** allow to download file via invisible link
* #206 Method `switchTo(alert())` now waits until alert appears
* #206 Method `switchTo(frame())` now waits until frame appears

=== 3.0 (Released 24.12.2015)
===== New functions:
* Add method Selenide.updateHash() (thanks to @fabienbancharel for pull request #254)
* upgrade to sizzle 2.2.1
* upgrade to guava 19.0
* upgrade to testng 6.9.10

===== Big refactoring:
* Refactor AbstractSelenideElement. Instead of single huge class, it's split to many small classes ("commands").
* User can override any of these commands
* User can add any custom commands to the standard Selenide methods

===== Code cleanup:
* Remove deprecated conditions:
  * `notPresent` -> Use method `$.shouldNot(exist)` or `$.shouldNotBe(present)`.
  * `hasOptions` -> Not needed anymore. Use methods `$.selectOption()` or `$.selectOptionByValue()`.
  * `options` -> Not needed anymore. Use methods `$.selectOption()` or `$.selectOptionByValue()`.
  * `hasNotClass` -> Use method `$.shouldNotHave(cssClass("abc"))`
* Remove deprecated class JQuery
* Remove deprecated class PrettyReportCreator (use class `TextReport` for JUnit or TestNG)
* Remove deprecated methods
  * `Selenide.switchToWindow(title)` -> use method `switchTo().window(title)`
  * `Selenide.switchToWindow(index)` -> use method `switchTo().window(index)`
* Remove deprecated methods
  * `WebDriverRunner.ie()` -> use method `WebDriverRunner.isIE()`
  * `WebDriverRunner.htmlUnit()` -> use method `WebDriverRunner.isHtmlUnit()`
  * `WebDriverRunner.phantomjs()` -> use method `WebDriverRunner.isPhantomjs()`
  * `WebDriverRunner.takeScreenShot()` -> use method `Screenshots.takeScreenShot()`
* Remove deprecated methods
  * `$.should*(String message, Condition condition)` -> use method `$.should*(condition.because(message))`
* Remove class com.codeborne.selenide.impl.Quotes 