@@ -91,37 +91,36 @@ public class Selectors {
     public String toString() {
       return "with text: " + elementText;
     }
-    
+
     String getXPath() {
       return super.toString().replace("By.xpath: ", "");
     }
-    
-    /**
-     * @see By#name(java.lang.String)
-     */
-    public static By byName(String xpath) {
-      return By.name(xpath);
-    }
-    
-    /**
-     * @see By#xpath(java.lang.String)
-     */
-    public static By byXpath(String xpath) {
-      return By.xpath(xpath);
-    }
-
-    /**
-     * @see By#linkText(java.lang.String)
-     */
-    public static By byLinkText(String xpath) {
-      return By.linkText(xpath);
-    }
-
-    /**
-     * @see By#partialLinkText(java.lang.String)
-     */
-    public static By byPartialLinkText(String xpath) {
-      return By.partialLinkText(xpath);
-    }
   }
+  /**
+   * @see By#name(java.lang.String)
+   */
+  public static By byName(String name) {
+    return By.name(name);
+  }
+  
+  /**
+   * @see By#xpath(java.lang.String)
+   */
+  public static By byXpath(String xpath) {
+    return By.xpath(xpath);
+  }
+
+  /**
+   * @see By#linkText(java.lang.String)
+   */
+  public static By byLinkText(String linkText) {
+    return By.linkText(linkText);
+  }
+
+  /**
+   * @see By#partialLinkText(java.lang.String)
+   */
+  public static By byPartialLinkText(String partialLinkText) {
+      return By.partialLinkText(partialLinkText);
+    }
 }
